# WatchyExtra

./: Cargo.toml
StarryHorizon/: StarryHorizon.ino  icons.h
server/: Cargo.toml
server/src/: main.rs
