[package]
name = "watchy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.4", features = ["json"] }
byteorder = "*"
